# tg-shopping-bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: tech_guide_en.md  tech_guide_ua.md  user_guide_en.md  user_guide_ua.md
initial_data/: products.json
src/: config.py  constants.py  loader.py
src/db/: connection.py  migrations.py
src/db/migrations/: 001_create_products.sql  002_create_users.sql  003_create_orders.sql  004_create_user_feedbacks.sql  005_seed_products.sql  006_intial_administrator.sql  007_add_payment_fields.sql  008_add_language_to_users.sql
src/guards/: admin.py
src/handlers/: __init__.py  admin.py  catalog.py  common.py  fallback.py  language.py  payments.py  start.py
src/handlers/forms/: __init__.py  add_product.py  feedback.py
src/keyboards/: inline.py  reply.py
src/middlewares/: __init__.py  language.py  logging.py
src/resources/: strings.py
src/services/: feedback.py  orders.py  payments.py  products.py  storage.py  users.py
src/utils/: logging.py
