[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "pydantic>=2.12.4",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.2.1",
    "aioboto3>=15.5.0",
]
